--- a/app/tech/cai-dat-ban-dau/page.mdx
+++ b/app/tech/cai-dat-ban-dau/page.mdx
@@ -1,9 +1,9 @@
-import By from '../_components/By'
+import By from "../_components/By";
 
 export const metadata = {
-  author: 'truongduchuy910',
-  description: 'Dựng mã nguồn blog bằng NextJS',
-}
+  author: "truongduchuy910",
+  description: "Dựng mã nguồn blog bằng NextJS",
+};
 
 # Dựng mã nguồn cho blog
 
