--- a/app/tech/nang-cap-cms-cho-blog/page.mdx
+++ b/app/tech/nang-cap-cms-cho-blog/page.mdx
@@ -1,8 +1,8 @@
 # Blog Management System
 
-Có đề cập trong bài về [rust](/tech/rust) mình nên cho phép sự ngây thơ xuất hiện khi bắt đầu học một thứ mới. Blog hiện tại của mình đang viết cũng vậy, không theo một chuẩn nào cả. Để khối lượng và các vấn đề lớn lên một cách tự nhiên. Sau đó chúng ta sẽ đưa ra các phương án phù hợp với thời điểm ấy. Không lường định xa quá 1 năm. Không cố gắng biên dịch kiến thức mới sang kiến thức cũ. Chẳng hạn như __"cái này giống với cái này mình từng học nè"__. 
+Có đề cập trong bài về [rust](/tech/rust) mình nên cho phép sự ngây thơ xuất hiện khi bắt đầu học một thứ mới. Blog hiện tại của mình đang viết cũng vậy, không theo một chuẩn nào cả. Để khối lượng và các vấn đề lớn lên một cách tự nhiên. Sau đó chúng ta sẽ đưa ra các phương án phù hợp với thời điểm ấy. Không lường định xa quá 1 năm. Không cố gắng biên dịch kiến thức mới sang kiến thức cũ. Chẳng hạn như **"cái này giống với cái này mình từng học nè"**.
 
-## Lựa chọn ngôn ngữ viết backend 
+## Lựa chọn ngôn ngữ viết backend
 
 Sau đây là một số suy nghĩ đang xem xét trong đầu mình:
 
