--- a/app/tech/vien-gach-dau-tien/page.mdx
+++ b/app/tech/vien-gach-dau-tien/page.mdx
@@ -1,7 +1,6 @@
-import By from '../_components/By'
+import By from "../_components/By";
 
 # Viên gạch đầu tiên
-
 
 Hôm nay, sau một ngày tăng ca cuối tuần. Mình có thời gian làm viết những gì mình thích. Vì ngày thường là viết cho công việc hoặc dành thời gian cho các mối quan hệ.
 
