--- a/app/x/truongduchuy910/page.mdx
+++ b/app/x/truongduchuy910/page.mdx
@@ -1,8 +1,8 @@
-import By from '../_components/By'
+import By from "../_components/By";
 
 export const metadata = {
-  author: 'truongduchuy910',
-}
+  author: "truongduchuy910",
+};
 
 # Trần Ngọc Huy
 
