--- a/app/tech/rust/page.mdx
+++ b/app/tech/rust/page.mdx
@@ -1,10 +1,10 @@
-import By from '../_components/By'
+import By from "../_components/By";
 
 # Rust
 
 Một ngôn ngữ lập trình tôi đang hướng đến.
 
-*Lưu ý: bài viết có thể gây khó chịu vì mình cố dùng từ Tiếng Việt cho các thuật ngữ.*
+_Lưu ý: bài viết có thể gây khó chịu vì mình cố dùng từ Tiếng Việt cho các thuật ngữ._
 
 ## Lý do tôi thích Rust
 
@@ -14,7 +14,7 @@ Một ngôn ngữ lập trình tôi đang hướng đến.
 
 Tiếp theo là tôi muốn ngầu, vì tui đã chán việc viết các ngôn ngữ ứng dụng cao. Khi mà nó luôn ưu tiên hiệu suất công việc và các lợi ích từ các thư viện có sẵn. Tui muốn được suy nghĩ nhiều hơn theo chiều sâu. Muốn xây dựng các thư viện nền. Tất nhiên tôi sẽ không làm giỏi các thư viện nền nhưng tôi muốn các bạn, các anh chị và những người anh em sau này sẽ đào sâu và phát triển nền móng hơn. Người đi sau sử dụng nền của người đi trước, chứ không phải xây dựng trên nền móng của người khác. Tệ hơn nữa là xây dựng trên nền móng mà mình không hiểu.
 
-Là cách suy nghĩ cá nhân, tui nghĩ nếu một ngày bạn xài thư viện của người khác vì lí do lười. Tất nhiên chẳng có gì sai cả. Nhưng sau này bạn cũng sẽ xài một thư viện mà bạn *không hiểu* cũng vì lười. Và theo cách đó, dần dần mọi thứ tệ đi. Sự siêng năng bị teo tóp.
+Là cách suy nghĩ cá nhân, tui nghĩ nếu một ngày bạn xài thư viện của người khác vì lí do lười. Tất nhiên chẳng có gì sai cả. Nhưng sau này bạn cũng sẽ xài một thư viện mà bạn _không hiểu_ cũng vì lười. Và theo cách đó, dần dần mọi thứ tệ đi. Sự siêng năng bị teo tóp.
 
 ## Nhưng mà sao tui vẫn chưa học Rust?
 
