--- a/app/x/truongduchuy910/page.mdx
+++ b/app/x/truongduchuy910/page.mdx
@@ -1,18 +1,289 @@
 import By from "../_components/By";
 
-export const metadata = {
-  author: "truongduchuy910",
-};
+export const metadata = { author: "truongduchuy910" };
 
 # Trần Ngọc Huy
 
-Experienced full-stack developer with three years of experience in the industry. Seeking
-to leverage high proficiency in Database, Node.js, Nginx, VPS, React.js and CSS as a full-
-stack developer.
+Full-Stack Developer (NodeJS, ReactJS, Linux)
 
-Maintain, upgrade and develop new projects. Manage the work of external employees. Work-
-ing with NestJS as OOP, NextJS with Typescript, ViteJS, PostgresSQL, Chakra UI, An-
-gularJS, MongoDB, Redis, rabbitmq, Nginx, VPS, Jenkin, Github Actions, Simple Store,
-Cloudflare,...
+Experienced full-stack developer with three years of experience in the industry.
+Seeking to leverage high proficiency in Database, Node.js, Nginx, VPS, React.js
+and CSS as a full- stack developer.
+
+Maintain, upgrade and develop new projects. Manage the work of external
+employees. Work- ing with NestJS as OOP, NextJS with Typescript, ViteJS,
+PostgresSQL, Chakra UI, An- gularJS, MongoDB, Redis, rabbitmq, Nginx, VPS,
+Jenkin, Github Actions, Simple Store, Cloudflare,...
 
 <By>Sài Gòn, 19/11/2023</By>
+
+## Personal Data
+
+| Name:          |                   Tran Ngoc Huy |
+| -------------- | ------------------------------: |
+| Gender:        |                            Male |
+| Date of Birth: |                 14 October 2000 |
+| Address:       | Thang Binh, Quang Nam, Viet Nam |
+| Phone/Zalo:    |                 +84 33 281 3077 |
+| Email:         |       truongduchuy910@gmail.com |
+| Skype:         |            live:truongduchuy910 |
+| Github:        |                @truongduchuy910 |
+| Linkedin:      |                @truongduchuy910 |
+| Family status: |                          Single |
+
+## Professional Summary
+
+Experienced full-stack developer with three years of experience in the industry.
+Seeking to leverage high proficiency in Database, Node.js, Nginx, VPS, React.js
+and CSS as a full-stack developer for freelancers.
+
+- Be proficient with React.js, Apollo Client, Typescript, Node.js, REST API,
+  GraphQL API, MySQL, MongoDB, MSSQL, React Native, Angular, Redux, SWR, CSS,...
+- Familiar with virtual private server
+- Experience in OOP
+- Understanding of software development tools, processes, and architecture
+- Proficient understanding of code versioning tools (Git is preferred)
+- Experience in the implementation of complex applications
+- Experience with multi-tier or service-oriented web applications
+- Experience with relational databases, SQL, and ORM technologies
+- Experience with build tools: Webpack...
+- Experience with search engines such as Elasticsearch...
+- Experience in testing practices and tools
+- Experience in agile software development
+- Sense of responsibility, communication skills, and team spirit
+- Willingness to learn and build a deep understanding
+- Be able to work independently and under pressure
+- English skills and Problem-solving skill
+
+## Work Experience & Projects
+
+### 11/2022 - now: Backend developer at Eduvator, Ho Chi Minh.
+
+### 04/2022 - 11/2022: Full-stack developer at CabinEat, Ho Chi Minh. (6 months)
+
+Maintain, upgrade and develop new projects. Manage the work of external
+employees. Working with NestJS as OOP, NextJS with Typescript, ViteJS,
+PostgresSQL, Chakra UI, AngularJS, MongoDB, Redis, rabbitmq, Nginx, VPS, Jenkin,
+Github Actions, Simple Store, Cloudflare,...
+
+#### Boxlink
+
+| Customer            | Production                                                |
+| ------------------- | --------------------------------------------------------- |
+| Description         | Help user create website via notion page (like super.so). |
+| Team size           | 1                                                         |
+| My position         | Fullstack                                                 |
+| My responsibilities | Development, deployment, maintenance, upgrade.            |
+| Technologies used   | MongoDB, OcopJS, NextJS, PM2, Vercel DNS, Bootstrap,      |
+|                     | Github actions.                                           |
+
+#### Voting
+
+| Customer            | Outsourcing for The Sandbox company limited.    |
+| ------------------- | ----------------------------------------------- |
+| Description         | Real-time voting for gameshow.                  |
+| Team size           | 2                                               |
+| My position         | Fullstack, lead                                 |
+| My responsibilities | Development, deployment, maintenance, upgrade.  |
+| Technologies used   | MongoDB, OcopJS, NextJS, PM2, Nginx, Chakra UI, |
+|                     | Github actions.                                 |
+
+#### Fan Portal
+
+| Customer            | Outsourcing for The Sandbox company limited.    |
+| ------------------- | ----------------------------------------------- |
+| Description         | Vote media and get giftcard.                    |
+| Team size           | 3                                               |
+| My position         | Fullstack, lead                                 |
+| My responsibilities | Development, deployment, maintenance, upgrade.  |
+| Technologies used   | MongoDB, OcopJS, ViteJS, PM2, Nginx, Chakra UI, |
+|                     | Github actions.                                 |
+
+#### Nhahang.so
+
+| Customer            | Production                                                |
+| ------------------- | --------------------------------------------------------- |
+| Description         | Ordering website for restaurant as a muti-tenant service. |
+| Team size           | 3                                                         |
+| My position         | Fullstack                                                 |
+| My responsibilities | Maintenance, upgrade.                                     |
+| Technologies used   | PostgresSQL, Redis, RabbitMQ, NestJS, NextJS,             |
+|                     | PM2, Nginx, Cloudflare, Jenkin.                           |
+
+#### Bahana
+
+| Customer            | Production                                    |
+| ------------------- | --------------------------------------------- |
+| Description         | Food pickup place management.                 |
+| Team size           | 3                                             |
+| My position         | Fullstack                                     |
+| My responsibilities | Maintenance, upgrade.                         |
+| Technologies used   | PostgresSQL, Redis, RabbitMQ, NestJS, NextJS, |
+|                     | PM2, Nginx, Cloudflare, Jenkin.               |
+
+#### Cabinfood
+
+| Customer            | Production                                         |
+| ------------------- | -------------------------------------------------- |
+| Description         | Food information management.                       |
+| Team size           | 3                                                  |
+| My position         | Fullstack                                          |
+| My responsibilities | Maintenance, upgrade.                              |
+| Technologies used   | PostgresSQL, Redis, RabbitMQ, NestJS, NextJS, PM2, |
+|                     | Nginx, Cloudflare, Jenkin.                         |
+
+#### CabinID
+
+| Customer            | Production                                    |
+| ------------------- | --------------------------------------------- |
+| Description         | Account management.                           |
+| Team size           | 2                                             |
+| My position         | Fullstack                                     |
+| My responsibilities | Maintenance, upgrade.                         |
+| Technologies used   | PostgresSQL, Redis, RabbitMQ, NestJS, NextJS, |
+|                     | PM2, Nginx, Cloudflare, Jenkin.               |
+
+#### Tiki App e-commerce
+
+| Customer            | Production                                             |
+| ------------------- | ------------------------------------------------------ |
+| Description         | Mini app base on Tini Platform (raumamix, cafeongbau). |
+| Team size           | 3                                                      |
+| My position         | Fullstack                                              |
+| My responsibilities | Maintenance, upgrade.                                  |
+| Technologies used   | PostgresSQL, Redis, RabbitMQ, NestJS, AngularJS,       |
+|                     | PM2, Nginx, Cloudflare, Jenkin.                        |
+
+```
+\subsection*{  02/2022 - 04/2022: Break from work}
+To rest after a traffic accident and focus on developing my graduation project.
+
+\pagebreak
+
+\subsection*{08/2021 - 02/2022: Full-stack developer at Sun Asterisk, Da Nang.}
+
+\subsubsection*{DISCO (See https://careerforum.net)}
+\begin{tabular}{ll}
+  \textbf{Customer} & Japanese \\
+  \textbf{Description} & Global recruitment, career support and educational marketing. \\
+  \textbf{Team size} & 20 \\
+  \textbf{My position} & Fullstack \\
+  \textbf{My responsibilities} & Investigate, fix and report software bugs. \\
+                               &  Expand database, implement business logic and user interface. \\
+                               &  Software quality assurance as unit testing, interface testing. \\
+  \textbf{Technologies used} & Ruby on rails, CSS, ERB, Angular, Jquery, \\
+                             & Elastic Search, Redis, SQL, Nginx. \\
+\end{tabular}
+
+
+
+\subsection*{since 04/2019: Full-stack developer for freelancers.}
+Working for small and medium-sized enterprises such as system development, upgrading, and maintenance. (2 years)
+
+
+\subsubsection*{More than 10 projects}
+\begin{sloppypar}
+Build from scratch: doyoumined.com, thecupidroom.com, mayberoom.vn, japan-apple.jp, yensaodatquang.vn,
+tuvilogic.com, hypesneaker.vn, b21shoemaker.store, shopwheydanang.com, madeuniform.vn,
+luangiaituvi.net, review.vote, moneymaker.vn, mine-ea.com,...
+\end{sloppypar}
+
+\begin{tabular}{ll}
+  \textbf{Customer} & Japanese, Australia, Vietnamese \\
+  \textbf{Description} & Multi-tenant ecommerce, landing page, booking, blog, Saas,... \\
+  \textbf{Team size} & 1-3 \\
+  \textbf{My position} & Fullstack \\
+  \textbf{My responsibilities} & Training, support and resolve problem for member. \\
+                               &  Expand database, implement business logic and user interface. \\
+                               &  Software quality assurance as unit testing, interface testing. \\
+  \textbf{Technologies used} & Node.js, Mongodb, GraphQL, React.js, NextJS, devOps. \\
+\end{tabular}
+
+
+\pagebreak
+
+\section{Education}
+\textbf{Software Engineering} \\
+\emph{Da Nang University of Science and Technology} \\
+\textbf{Graduation:} 2022
+\\
+Here are some of the projects:
+\begin{enumerate}
+  -  Semester 1/2018-2019 - PBL\footnote{Project based learning}: Notification system for school \emph{(leader)}. Written in node.js, mongodb, heroku. Facebook API integration. Advisor by PhD Le Thi My Hanh.
+  -  Semester 1/2019-2020 - PBL: Restaurant management system \emph{(leader)}. Written in C++ Console, MySQL. Advisor by PhD Dang Hoai Phuong.
+  -  Semester 2/2019-2020 - PBL: Practical laboratory management system \emph{(leader)}. Written in C Sharp Winform, MySQL. Mentor by Enclave Company.
+  -  Semester 1/2020-2021 - PBL: Lamport timestamp algorithm \emph{(leader)}. Written in Java. Advisor by MCS. Mai Van Ha.
+  -  Semester 2/2020-2021 - PBL: Timekeeping using facial recognition \emph{(leader)}. Written in node.js, python, mongodb, react native. Microservices architecture. Deployment to Virtual Private Server. Advisor by PhD Bui Thi Thanh Thanh.
+  -  Semester 1/2021-2022 - PBL: Social network service \emph{(leader)}. Written in node.js, mongodb, react native. Microservices architecture. Deployment to Virtual Private Server. Deployment to Virtual Private Server. Advisor by PhD Nguyen Van Hieu.
+  -  Semester 2/2021-2022 - Thesis: System for creating and linking e-commerce. Microservices architecture. Deployment to Virtual Private Server. Advisor by PhD Le Thi My Hanh.
+\end{enumerate}
+Some exercises:
+\begin{enumerate}
+  -  Website programming \emph{(PHP)}.
+  -  Digital signal processing \emph{(Matlab)}.
+  -  Data science, Algorithm \emph{(Python)}.
+\end{enumerate}
+
+
+
+\section{Technical Skills}
+\subsection{Proficiency Description}
+\paragraph{Basic knowledge} BK Basic knowledge, needs much guidance and support in using
+the competence
+\paragraph{Limited experience} LE Able to work in the area, needs some guidance in using the
+competence
+\paragraph{Practical application} PA Good knowledge and skills, works independently, has
+sound experience in using the competence
+\paragraph{Applied theory} AT Advanced knowledge and skills, provides guidance and direction
+to others
+\paragraph{Recognized authority} RA Exceptional knowledge and skills, perceived as an
+authority in this competency area, is innovative in using the competence
+
+\vspace{1em}
+\begin{center}
+  \begin{tabular}{| l | p{0.4\textwidth} |}
+    \hline
+    Skill & Proficiency\\
+    \hline
+    Data Construction & Basic knowledge \\
+    Algorithm & Limited experience \\
+    Programming Techniques & Practical application \\
+    Object oriented programming & Applied theory \\
+    Unified Modeling Language & Limited experience \\
+    Computer network & Basic knowledge \\
+    Database management system & Basic knowledge \\
+    \hline
+    MVC architectural pattern & Limited experience \\
+    Git version control & Limited experience \\
+    REST,
+    GraphQL & Limited experience \\
+    \hline
+    React.js, Next.js & Practical application \\
+    HTML, CSS & Limited experience \\
+    Linux, Nginx, Github actions & Limited experience \\
+    \hline
+    Photoshop, Illustrator, Figma & Basic knowledge \\
+    \hline
+
+  \end{tabular}
+\end{center}
+
+\section{My frameworks}
+@ocopjs - The power headless content management, custom from keystone.js. See more in https://www.npmjs.com/$\sim$truongduchuy910.
+\begin{itemize}
+  -  \textbf{@ocopjs/fields} OcopJS Field Types including Text, Password, DateTime, Integer, and more.
+  -  \textbf{@ocopjs/app-admin-ui} OcopJS Admin UI App.
+  -  \textbf{@ocopjs/access-control} OcopJS Access Control parsing and validating utilities.
+  -  \textbf{@ocopjs/adapter-mongoose} OcopJS Mongoose Database adapter.
+  -  \textbf{@ocopjs/app-graphql} OcopJS GraphQL App.
+  -  \textbf{@ocopjs/app-graphql-playground} OcopJS GraphQL Playground App.
+  -  \textbf{@ocopjs/server-side-graphql-client} A library for running server-side graphQL queries and mutations in ocopjs.
+  -  \textbf{@ocopjs/session} Tools to assist with setting up session management in your ocopjs system.
+  -  \textbf{@ocopjs/utils} Common utility functions used throughout @ocopjs packages.
+  -  \textbf{@ocopjs/auth-password} Provides a basic password authentication strategy.
+  -  \textbf{@ocopjs/file-adapters} Adapters for handling storage of the File type
+  -  \textbf{@ocopjs/list-plugins} List level plugins which can update list config during list initialization including adding additional fields.
+  -  \textbf{@ocopjs/ocopjs} The main @ocopjs class \& CLI. This is where the magic happens.
+\end{itemize}
+\end{document}
+```
