docs: truongduchuy910 content

--- a/app/x/truongduchuy910/page.mdx
+++ b/app/x/truongduchuy910/page.mdx
@@ -154,136 +154,115 @@ Github Actions, Simple Store, Cloudflare,...
 | Technologies used   | PostgresSQL, Redis, RabbitMQ, NestJS, AngularJS,       |
 |                     | PM2, Nginx, Cloudflare, Jenkin.                        |
 
-```
-\subsection*{  02/2022 - 04/2022: Break from work}
-To rest after a traffic accident and focus on developing my graduation project.
+### 02/2022 - 04/2022: Break from work
 
-\pagebreak
+To focus on my graduation project.
 
-\subsection*{08/2021 - 02/2022: Full-stack developer at Sun Asterisk, Da Nang.}
+### 08/2021 - 02/2022: Full-stack developer at Sun Asterisk, Da Nang.
 
-\subsubsection*{DISCO (See https://careerforum.net)}
-\begin{tabular}{ll}
-  \textbf{Customer} & Japanese \\
-  \textbf{Description} & Global recruitment, career support and educational marketing. \\
-  \textbf{Team size} & 20 \\
-  \textbf{My position} & Fullstack \\
-  \textbf{My responsibilities} & Investigate, fix and report software bugs. \\
-                               &  Expand database, implement business logic and user interface. \\
-                               &  Software quality assurance as unit testing, interface testing. \\
-  \textbf{Technologies used} & Ruby on rails, CSS, ERB, Angular, Jquery, \\
-                             & Elastic Search, Redis, SQL, Nginx. \\
-\end{tabular}
+#### DISCO (See https://careerforum.net)}
 
+| Customer            | Japanese                                                       |
+| ------------------- | -------------------------------------------------------------- |
+| Description         | Global recruitment, career support and educational marketing.  |
+| Team size           | 20                                                             |
+| My position         | Fullstack                                                      |
+| My responsibilities | Investigate, fix and report software bugs.                     |
+|                     | Expand database, implement business logic and user interface.  |
+|                     | Software quality assurance as unit testing, interface testing. |
+| Technologies used   | Ruby on rails, CSS, ERB, Angular, Jquery,                      |
+|                     | Elastic Search, Redis, SQL, Nginx.                             |
 
+### since 04/2019: Full-stack developer for freelancers.
 
-\subsection*{since 04/2019: Full-stack developer for freelancers.}
 Working for small and medium-sized enterprises such as system development, upgrading, and maintenance. (2 years)
 
+#### More than 10 projects
 
-\subsubsection*{More than 10 projects}
-\begin{sloppypar}
 Build from scratch: doyoumined.com, thecupidroom.com, mayberoom.vn, japan-apple.jp, yensaodatquang.vn,
 tuvilogic.com, hypesneaker.vn, b21shoemaker.store, shopwheydanang.com, madeuniform.vn,
 luangiaituvi.net, review.vote, moneymaker.vn, mine-ea.com,...
-\end{sloppypar}
 
-\begin{tabular}{ll}
-  \textbf{Customer} & Japanese, Australia, Vietnamese \\
-  \textbf{Description} & Multi-tenant ecommerce, landing page, booking, blog, Saas,... \\
-  \textbf{Team size} & 1-3 \\
-  \textbf{My position} & Fullstack \\
-  \textbf{My responsibilities} & Training, support and resolve problem for member. \\
-                               &  Expand database, implement business logic and user interface. \\
-                               &  Software quality assurance as unit testing, interface testing. \\
-  \textbf{Technologies used} & Node.js, Mongodb, GraphQL, React.js, NextJS, devOps. \\
-\end{tabular}
+| Customer            | Japanese, Australia, Vietnamese                                |
+| ------------------- | -------------------------------------------------------------- |
+| Description         | Multi-tenant ecommerce, landing page, booking, blog, Saas,...  |
+| Team size           | 1-3                                                            |
+| My position         | Fullstack                                                      |
+| My responsibilities | Training, support and resolve problem for member.              |
+|                     | Expand database, implement business logic and user interface.  |
+|                     | Software quality assurance as unit testing, interface testing. |
+| Technologies used   | Node.js, Mongodb, GraphQL, React.js, NextJS, devOps.           |
 
+## Education
 
-\pagebreak
+Software Engineering Da Nang University of Science and Technology
 
-\section{Education}
-\textbf{Software Engineering} \\
-\emph{Da Nang University of Science and Technology} \\
-\textbf{Graduation:} 2022
-\\
+Graduation: 2022
+
 Here are some of the projects:
-\begin{enumerate}
-  -  Semester 1/2018-2019 - PBL\footnote{Project based learning}: Notification system for school \emph{(leader)}. Written in node.js, mongodb, heroku. Facebook API integration. Advisor by PhD Le Thi My Hanh.
-  -  Semester 1/2019-2020 - PBL: Restaurant management system \emph{(leader)}. Written in C++ Console, MySQL. Advisor by PhD Dang Hoai Phuong.
-  -  Semester 2/2019-2020 - PBL: Practical laboratory management system \emph{(leader)}. Written in C Sharp Winform, MySQL. Mentor by Enclave Company.
-  -  Semester 1/2020-2021 - PBL: Lamport timestamp algorithm \emph{(leader)}. Written in Java. Advisor by MCS. Mai Van Ha.
-  -  Semester 2/2020-2021 - PBL: Timekeeping using facial recognition \emph{(leader)}. Written in node.js, python, mongodb, react native. Microservices architecture. Deployment to Virtual Private Server. Advisor by PhD Bui Thi Thanh Thanh.
-  -  Semester 1/2021-2022 - PBL: Social network service \emph{(leader)}. Written in node.js, mongodb, react native. Microservices architecture. Deployment to Virtual Private Server. Deployment to Virtual Private Server. Advisor by PhD Nguyen Van Hieu.
-  -  Semester 2/2021-2022 - Thesis: System for creating and linking e-commerce. Microservices architecture. Deployment to Virtual Private Server. Advisor by PhD Le Thi My Hanh.
-\end{enumerate}
-Some exercises:
-\begin{enumerate}
-  -  Website programming \emph{(PHP)}.
-  -  Digital signal processing \emph{(Matlab)}.
-  -  Data science, Algorithm \emph{(Python)}.
-\end{enumerate}
 
+- Semester 1/2018-2019 - PBL(_Project based learning_): Notification system for school _(leader)_. Written in node.js, mongodb, heroku. Facebook API integration. Advisor by PhD Le Thi My Hanh.
+- Semester 1/2019-2020 - PBL: Restaurant management system _(leader)_. Written in C++ Console, MySQL. Advisor by PhD Dang Hoai Phuong.
+- Semester 2/2019-2020 - PBL: Practical laboratory management system _(leader)_. Written in C Sharp Winform, MySQL. Mentor by Enclave Company.
+- Semester 1/2020-2021 - PBL: Lamport timestamp algorithm _(leader)_. Written in Java. Advisor by MCS. Mai Van Ha.
+- Semester 2/2020-2021 - PBL: Timekeeping using facial recognition _(leader)_. Written in node.js, python, mongodb, react native. Microservices architecture. Deployment to Virtual Private Server. Advisor by PhD Bui Thi Thanh Thanh.
+- Semester 1/2021-2022 - PBL: Social network service _(leader)_. Written in node.js, mongodb, react native. Microservices architecture. Deployment to Virtual Private Server. Deployment to Virtual Private Server. Advisor by PhD Nguyen Van Hieu.
+- Semester 2/2021-2022 - Thesis: System for creating and linking e-commerce. Microservices architecture. Deployment to Virtual Private Server. Advisor by PhD Le Thi My Hanh.
+  Some exercises:
+- Website programming _(PHP)_.
+- Digital signal processing _(Matlab)_.
+- Data science, Algorithm _(Python)_.
 
+## Technical Skills
 
-\section{Technical Skills}
-\subsection{Proficiency Description}
-\paragraph{Basic knowledge} BK Basic knowledge, needs much guidance and support in using
+### Proficiency Description
+
+_Basic knowledge_ BK Basic knowledge, needs much guidance and support in using
 the competence
-\paragraph{Limited experience} LE Able to work in the area, needs some guidance in using the
+
+_Limited experience_ LE Able to work in the area, needs some guidance in using the
 competence
-\paragraph{Practical application} PA Good knowledge and skills, works independently, has
+
+_Practical application_ PA Good knowledge and skills, works independently, has
 sound experience in using the competence
-\paragraph{Applied theory} AT Advanced knowledge and skills, provides guidance and direction
+
+_Applied theory_ AT Advanced knowledge and skills, provides guidance and direction
 to others
-\paragraph{Recognized authority} RA Exceptional knowledge and skills, perceived as an
+
+_Recognized authority_ RA Exceptional knowledge and skills, perceived as an
 authority in this competency area, is innovative in using the competence
 
-\vspace{1em}
-\begin{center}
-  \begin{tabular}{| l | p{0.4\textwidth} |}
-    \hline
-    Skill & Proficiency\\
-    \hline
-    Data Construction & Basic knowledge \\
-    Algorithm & Limited experience \\
-    Programming Techniques & Practical application \\
-    Object oriented programming & Applied theory \\
-    Unified Modeling Language & Limited experience \\
-    Computer network & Basic knowledge \\
-    Database management system & Basic knowledge \\
-    \hline
-    MVC architectural pattern & Limited experience \\
-    Git version control & Limited experience \\
-    REST,
-    GraphQL & Limited experience \\
-    \hline
-    React.js, Next.js & Practical application \\
-    HTML, CSS & Limited experience \\
-    Linux, Nginx, Github actions & Limited experience \\
-    \hline
-    Photoshop, Illustrator, Figma & Basic knowledge \\
-    \hline
+| Skill                         | Proficiency           |
+| ----------------------------- | --------------------- |
+| Data Construction             | Basic knowledge       |
+| Algorithm                     | Limited experience    |
+| Programming Techniques        | Practical application |
+| Object oriented programming   | Applied theory        |
+| Unified Modeling Language     | Limited experience    |
+| Computer network              | Basic knowledge       |
+| Database management system    | Basic knowledge       |
+| MVC architectural pattern     | Limited experience    |
+| Git version control           | Limited experience    |
+| GraphQL                       | Limited experience    |
+| React.js, Next.js             | Practical application |
+| HTML, CSS                     | Limited experience    |
+| Linux, Nginx, Github actions  | Limited experience    |
+| Photoshop, Illustrator, Figma | Basic knowledge       |
 
-  \end{tabular}
-\end{center}
+## For community
 
-\section{My frameworks}
-@ocopjs - The power headless content management, custom from keystone.js. See more in https://www.npmjs.com/$\sim$truongduchuy910.
-\begin{itemize}
-  -  \textbf{@ocopjs/fields} OcopJS Field Types including Text, Password, DateTime, Integer, and more.
-  -  \textbf{@ocopjs/app-admin-ui} OcopJS Admin UI App.
-  -  \textbf{@ocopjs/access-control} OcopJS Access Control parsing and validating utilities.
-  -  \textbf{@ocopjs/adapter-mongoose} OcopJS Mongoose Database adapter.
-  -  \textbf{@ocopjs/app-graphql} OcopJS GraphQL App.
-  -  \textbf{@ocopjs/app-graphql-playground} OcopJS GraphQL Playground App.
-  -  \textbf{@ocopjs/server-side-graphql-client} A library for running server-side graphQL queries and mutations in ocopjs.
-  -  \textbf{@ocopjs/session} Tools to assist with setting up session management in your ocopjs system.
-  -  \textbf{@ocopjs/utils} Common utility functions used throughout @ocopjs packages.
-  -  \textbf{@ocopjs/auth-password} Provides a basic password authentication strategy.
-  -  \textbf{@ocopjs/file-adapters} Adapters for handling storage of the File type
-  -  \textbf{@ocopjs/list-plugins} List level plugins which can update list config during list initialization including adding additional fields.
-  -  \textbf{@ocopjs/ocopjs} The main @ocopjs class \& CLI. This is where the magic happens.
-\end{itemize}
-\end{document}
-```
+@ocopjs - The power headless content management, custom from keystone.js. See more in https://www.npmjs.com/org/ocopjs
+
+- **@ocopjs/fields** OcopJS Field Types including Text, Password, DateTime, Integer, and more.
+- **@ocopjs/app-admin-ui** OcopJS Admin UI App.
+- **@ocopjs/access-control** OcopJS Access Control parsing and validating utilities.
+- **@ocopjs/adapter-mongoose** OcopJS Mongoose Database adapter.
+- **@ocopjs/app-graphql** OcopJS GraphQL App.
+- **@ocopjs/app-graphql-playground** OcopJS GraphQL Playground App.
+- **@ocopjs/server-side-graphql-client** A library for running server-side graphQL queries and mutations in ocopjs.
+- **@ocopjs/session** Tools to assist with setting up session management in your ocopjs system.
+- **@ocopjs/utils** Common utility functions used throughout @ocopjs packages.
+- **@ocopjs/auth-password** Provides a basic password authentication strategy.
+- **@ocopjs/file-adapters** Adapters for handling storage of the File type
+- **@ocopjs/list-plugins** List level plugins which can update list config during list initialization including adding additional fields.
+- **@ocopjs/ocop** The main @ocopjs class \& CLI. This is where the magic happens.
