--- a/app/open-source/ocopjs/page.mdx
+++ b/app/open-source/ocopjs/page.mdx
@@ -8,9 +8,10 @@ tuỳ biến cao.
 anh chị nhiều năm trong nghề đóng góp xây dựng bộ mã nguồn mang tính biểu tượng
 có khả năng nối tiếp mãi về các thế hệ sau.
 
-### Ba không sẽ làm thoái trào nền lập trình
+### Những điều có hại cho ngành lập trình.
 
 - Người trẻ có không tiếp nối các thành tựu cũ. Thì sẽ không có dự án quy mô.
 - Người thực nghiệm không truyền đạt, đóng gói kiến thức. Thì sẽ không có cộng
   sự.
-- Người dùng không khắt khe với sản phẩm. Thì thiếu động lực phát triển.
+- Người dùng không khắt khe với sản phẩm. Thì sẽ không tạo ra môi trường phát
+  triển.
