docs: ocopjs homepage

--- a/app/open-source/ocopjs/_page.mdx
+++ b/app/open-source/ocopjs/_page.mdx
@@ -1,4 +1,4 @@
-# Giới thiệu
+## Giới thiệu
 
 OcopJS là mã nguồn mở hướng đến cộng đồng lập trình viên Việt Nam. Cho phép tạo
 và quản lý nội dung nhanh. Xuất bản sản phẩm với tốc nhanh đi đôi với khả năng
@@ -7,8 +7,6 @@ tuỳ biến cao.
 Đồng thời chúng tôi kêu gọi các bạn lập trình viên Javascript. Đặc biệt là những
 anh chị nhiều năm trong nghề đóng góp xây dựng bộ mã nguồn mang tính biểu tượng
 có khả năng nối tiếp mãi về các thế hệ sau.
-
-### Những điều có hại cho ngành lập trình.
 
 - Người trẻ có không tiếp nối các thành tựu cũ. Thì sẽ không có dự án quy mô.
 - Người thực nghiệm không truyền đạt, đóng gói kiến thức. Thì sẽ không có cộng
